# media-control

./: .gitignore  .mise.toml  .sops.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  HYPRLAND_IPC_ANALYSIS.md  flake.nix  justfile  readme.md  secrets.yaml  todo.md
.claude/worktrees/agent-a0c10daa/memory-bank/: project.yaml
.claude/worktrees/agent-a0c10daa/systemd/: install.sh
.claude/worktrees/agent-a0c40482/: BUGFIX_FULLSCREEN.md  CLAUDE.md
.claude/worktrees/agent-a0c40482/.direnv/: flake-profile-2-link
.claude/worktrees/agent-a272bd19/: flake.nix  ipc-reliability-inception.md  todo.md
.claude/worktrees/agent-a272bd19/crates/media-control/: Cargo.toml
.claude/worktrees/agent-a272bd19/crates/media-control/src/: main.rs
.claude/worktrees/agent-a272bd19/systemd/: media-control-daemon.socket
.claude/worktrees/agent-a50371bf/: Cargo.toml  HYPRLAND_IPC_ANALYSIS.md  PROGRESS.md  SHIM_INTEGRATION.md
.claude/worktrees/agent-a5be6beb/.specsmd/: manifest.yaml
.claude/worktrees/agent-a6c19cae/: play-subcommand-prompt.md
.claude/worktrees/agent-a6c19cae/.claude/: settings.local.json
.claude/worktrees/agent-a93ab319/: .desk  .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md
.claude/worktrees/agent-a93ab319/crates/media-control-lib/: Cargo.toml
.claude/worktrees/agent-a93ab319/crates/media-control-lib/src/: window.rs
.claude/worktrees/agent-a93ab319/crates/media-control-lib/src/commands/: avoid.rs  chapter.rs  focus.rs  mod.rs  random.rs
.direnv/: flake-profile-1-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 13sz0hpp5xfvnsa7y3mpwh4jzp5x2gx0-source  18z7gg0yrf817mldnvn5qry4h8sm4g7h-source  1lad8n64sg1y09xk6j3n8h0vw5nq32y3-source  gc2hp07lhivh5815pa85z9da146asn3l-source  rwsgvz41nkj1ixghp4wx7ld5jz2z537h-source
.forgejo/workflows/: attic-trigger.yaml  ci.yaml
crates/media-control/: Cargo.toml
crates/media-control-daemon/: Cargo.toml
crates/media-control-daemon/src/: main.rs
crates/media-control-daemon/tests/: boundary.rs
crates/media-control-lib/: Cargo.toml
crates/media-control-lib/src/: config.rs  error.rs  hyprland.rs  jellyfin.rs  lib.rs  test_helpers.rs  transport.rs  window.rs
crates/media-control-lib/src/commands/: avoid.rs  chapter.rs  close.rs  focus.rs  fullscreen.rs  keep.rs  mark_watched.rs  minify.rs  mod.rs  move_window.rs  pin.rs  play.rs  random.rs  seek.rs  shared.rs  status.rs
crates/media-control-lib/src/commands/window/: avoid.rs  close.rs  focus.rs  geometry.rs  minify.rs  mod.rs  move_window.rs
crates/media-control-lib/src/commands/workflow/: chapter.rs  keep.rs  mark_watched.rs  mod.rs  play.rs  random.rs
crates/media-control/src/: main.rs
intents/: sock-trigger-ipc.md
memory-bank/: story-index.md
memory-bank/bolts/001-mock-infrastructure/: bolt.md  implementation-plan.md  implementation-walkthrough.md  test-walkthrough.md
memory-bank/bolts/002-test-coverage/: bolt.md  implementation-plan.md  implementation-walkthrough.md  test-walkthrough.md
memory-bank/bolts/003-test-coverage/: bolt.md  implementation-plan.md  implementation-walkthrough.md
memory-bank/bolts/004-logic-cleanup/: bolt.md  implementation-plan.md  implementation-walkthrough.md
memory-bank/bolts/005-logic-cleanup/: bolt.md  implementation-plan.md  implementation-walkthrough.md
memory-bank/bolts/006-strategy-engine/: bolt.md  implementation-plan.md  implementation-walkthrough.md
memory-bank/bolts/007-jellyfin-queries/: bolt.md
memory-bank/bolts/008-strategy-implementations/: bolt.md
memory-bank/bolts/009-ipc-hardening/: bolt.md  implementation-plan.md
memory-bank/bolts/010-play-command/: bolt.md  implementation-plan.md
memory-bank/bolts/011-status-command/: bolt.md  implementation-plan.md  test-walkthrough.md
memory-bank/bolts/012-jellyfin-error-handling/: bolt.md
memory-bank/bolts/013-daemon-signals/: bolt.md
memory-bank/bolts/019-audit-lib-hardening/: bolt.md
memory-bank/bolts/020-audit-jellyfin-hardening/: bolt.md
memory-bank/bolts/021-audit-minify-fix/: bolt.md
memory-bank/bolts/022-audit-mark-watched-tests/: bolt.md
memory-bank/bolts/023-audit-handler-fixes/: bolt.md
memory-bank/bolts/024-audit-daemon-config/: bolt.md
memory-bank/bolts/025-commands-regrouping/: bolt.md  implementation-plan.md  implementation-walkthrough.md  test-walkthrough.md
memory-bank/bolts/026-daemon-substrate-tightening/: adr-001-daemon-boundary-via-feature-and-greptest.md  bolt.md  ddd-01-domain-model.md  ddd-02-technical-design.md  ddd-03-test-report.md
memory-bank/bolts/027-avoider-cleanup/: bolt.md  ddd-01-domain-model.md  ddd-02-technical-design.md  ddd-03-test-report.md
memory-bank/bolts/028-his-resolve-with-probe/: bolt.md  implementation-plan.md  implementation-walkthrough.md  test-walkthrough.md
memory-bank/bolts/029-daemon-reconnect-re-resolution/: bolt.md  implementation-plan.md  implementation-walkthrough.md  test-walkthrough.md
memory-bank/bolts/030-socket-transport/: bolt.md  implementation-plan.md  implementation-walkthrough.md  test-walkthrough.md
memory-bank/bolts/031-rollout-migration/: bolt.md  implementation-plan.md  implementation-walkthrough.md  test-walkthrough.md
memory-bank/intents/001-test-and-refactor/: inception-log.md
memory-bank/intents/002-smart-next-episode/: system-context.md
memory-bank/intents/003-delegate-to-shim/: inception-log.md
memory-bank/intents/004-ipc-reliability/: requirements.md
memory-bank/intents/008-daemon-reliability/: inception-log.md
memory-bank/intents/009-error-propagation/: requirements.md
memory-bank/intents/014-audit-round4-fixes/: intent.md
memory-bank/intents/015-avoider-carveout/: inception-log.md  requirements.md  system-context.md  units.md
memory-bank/intents/017-daemon-his-autodetect/: inception-log.md  requirements.md  system-context.md  units.md
memory-bank/intents/018-sock-trigger-ipc/: inception-log.md  requirements.md  system-context.md  units.md
memory-bank/standards/: decision-index.md  tech-stack.md
systemd/: install.sh  media-control-daemon.service
(+209 files in other folders)
