[workspace]
resolver = "2"
members = ["crates/media-control", "crates/media-control-daemon", "crates/media-control-lib"]

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/rain/media-control"

[workspace.dependencies]
# Async runtime — features declared per-crate (workspace baseline is minimal)
tokio = { version = "1", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pattern matching
regex = "1"

# CLI parsing
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# HTTP client (Jellyfin API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# System utilities
gethostname = "1.0"
nix = { version = "0.30", default-features = false, features = ["signal", "process"] }

# Shell-style argv tokenization (no shell expansion) for safe `--launch` parsing
shlex = "1"

# Workspace crates (for inter-crate dependencies)
media-control-lib = { path = "crates/media-control-lib" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
