[package]
name = "media-control-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Event-driven daemon for media window avoidance in Hyprland"

[[bin]]
name = "media-control-daemon"
path = "src/main.rs"

[dependencies]
media-control-lib.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

# For PID file management and FIFO creation
nix = { version = "0.30", features = ["signal", "process", "fs", "user"] }

[dev-dependencies]
tempfile = "3"
