[package]
name = "media-control"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for managing media windows in Hyprland"

[[bin]]
name = "media-control"
path = "src/main.rs"

[dependencies]
media-control-lib = { workspace = true, features = ["cli"] }
clap.workspace = true
clap_complete.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
