[package]
name = "media-control-lib"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt", "net", "io-util", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true, features = ["parse"] }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
gethostname.workspace = true
shlex.workspace = true

[dev-dependencies]
tempfile = "3"
